--- a/Minecraft lab PVP.html
+++ b/Minecraft lab PVP.html
@@ -38,7 +38,7 @@ body{
 <body>
 <div id="menubar" style="text-align: center; display: inline-block; margin-top: 30px; margin-left: 30px;">
     <div style="background-color:coral">
-        <a href="./Minecraft lab Lobby.html">Home</a>
+        <a href="./index.html">Home</a>
     </div>
     <div style="background-color: navajowhite;">
         <a>PVP</a>
