--- a/Minecraft lab Survival.html
+++ b/Minecraft lab Survival.html
@@ -71,7 +71,7 @@
 
 <div id="menubar" style="text-align: center; display: inline-block; margin-top: 30px; margin-left: 30px;">
     <div style="background-color:coral">
-        <a href="./Minecraft lab Lobby.html">Home</a>
+        <a href="./index.html">Home</a>
     </div>
     <div style="background-color: navajowhite;">
         <a href="./Minecraft lab PVP.html">PVP</a>
